# goal-star-backend

./: CLAUDE.md  LICENSE  Makefile  README.md  manage.py  pyproject.toml  railway.json
.cursor/rules/: django.mdc
goal/: admin.py  models.py  schemas.py  tasks.py  views.py
goal/migrations/: 0001_initial.py
service/: api.py  settings.py  urls.py
user/: admin.py  authentication.py  clerk.py  models.py  views.py
user/migrations/: 0001_initial.py
utils/: schemas.py  shemas.py
