[project]
name = "goal-star-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clerk-backend-api>=3.0.3",
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-ninja>=1.4.3",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.9",
    "whitenoise>=6.9.0",
]
